force-app/main/default/objects/Product2/fields/Asset_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>Asset_Account_Ref__c</fullName>
    <label>Asset Account Ref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventory Asset</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>