force-app/main/default/objects/Product2/fields/COGS_Account_Ref__c.field-meta.xml
<CustomField>
    <fullName>COGS_Account_Ref__c</fullName>
    <label>COGS Account Ref</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost of Goods Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>