force-app/main/default/objects/Product2/fields/Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account__c</fullName>
    <label>Expense Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>