force-app/main/default/objects/Product2/fields/Income_Account__c.field-meta.xml
<CustomField>
    <fullName>Income_Account__c</fullName>
    <label>Income Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>79</fullName>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Construction Income:Materials Income</fullName>
                <isActive>false</isActive>
                <label>Construction Income:Materials Income</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:ALDER</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:ALDER</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:ASH</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:ASH</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:BEECH</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:BEECH</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:BIRCH</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:BIRCH</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:CHERRY</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:CHERRY</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:DOVETAILS/FRAMES</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:DOVETAILS/FRAMES</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:EASTERN PINE</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:EASTERN PINE</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:HICKORY</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:HICKORY</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:MAHOGANY</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:MAHOGANY</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:MAPLE</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:MAPLE</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:POPLAR</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:POPLAR</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:RED OAK</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:RED OAK</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:RED OAK FRAME STOCK</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:RED OAK FRAME STOCK</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:SOUTHERN YELLOW</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:SOUTHERN YELLOW</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:VG FIR</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:VG FIR</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:WALNUT</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:WALNUT</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:WHITE OAK</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:WHITE OAK</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:WHITE OAK FRAME STOCK</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:WHITE OAK FRAME STOCK</label>
            </value>
            <value>
                <fullName>Cost of Goods Sold:WHITE PINE</fullName>
                <isActive>false</isActive>
                <label>Cost of Goods Sold:WHITE PINE</label>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Job Expenses</fullName>
                <isActive>false</isActive>
                <label>Job Expenses</label>
            </value>
            <value>
                <fullName>SAW SHARPENING &amp; CUTTERS</fullName>
                <isActive>false</isActive>
                <label>SAW SHARPENING &amp; CUTTERS</label>
            </value>
            <value>
                <fullName>SMALL TOOLS</fullName>
                <isActive>false</isActive>
                <label>SMALL TOOLS</label>
            </value>
            <value>
                <fullName>Services</fullName>
                <isActive>false</isActive>
                <label>Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>