force-app/main/default/objects/Product2/fields/InvStartDate__c.field-meta.xml
<CustomField>
    <fullName>InvStartDate__c</fullName>
    <label>InvStartDate</label>
    <type>Date</type>
</CustomField>