force-app/main/default/objects/Product2/fields/Is_Synced__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Synced</label>
    <type>Checkbox</type>
</CustomField>