force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Non-Inventory</fullName>
            </value>
            <value>
                <fullName>NonInventory</fullName>
                <isActive>false</isActive>
                <label>NonInventory</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>