force-app/main/default/objects/Product2/fields/QtyOnHand__c.field-meta.xml
<CustomField>
    <fullName>QtyOnHand__c</fullName>
    <label>QtyOnHand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>