force-app/main/default/objects/Product2/fields/QuickbookID__c.field-meta.xml
<CustomField>
    <fullName>QuickbookID__c</fullName>
    <externalId>true</externalId>
    <label>QuickbookID</label>
    <length>222</length>
    <type>Text</type>
</CustomField>