force-app/main/default/objects/Product2/fields/TrackQtyOnHand__c.field-meta.xml
<CustomField>
    <fullName>TrackQtyOnHand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TrackQtyOnHand</label>
    <type>Checkbox</type>
</CustomField>